
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[v1.3.0]]
== 1.3.0 (05.12.2019)

icon:plus[] Core: The amount of the deployed REST API verticles can now be link:{{< relref "administration-guide.asciidoc" >}}#_httpsssl[configured] and its default has been changed from 5 to 2 * CPU Cores.

icon:plus[] Core: It is now possible to use Gentics Mesh in read only mode. Take a look at the link:{{< relref "administration-guide.asciidoc" >}}#readonly[documentation] for more information.

icon:check[] REST: The `/health/live` and `/health/ready` endpoints have been added to the REST API. These endpoints are also available on the monitoring server, but adding them to the REST server makes it possible for load balancers to monitor the server on the same port that used to proxy the requests.

icon:check[] REST: The link:https://getmesh.io/docs/api/#users__userUuid__token_post[`/user/:uuid/token`] endpoint now has the Cache-Control header set to private.

icon:check[] Java Rest Client: Fixed a bug that caused `MeshOkHttpRequestImpl#getResponse` to always return null.

icon:plus[] Core: The core Vert.x library was updated to version `3.8.4`.

icon:plus[] Core: The core plugin framework library was updated to version `2.1.0`.

icon:check[] OrientDB: The included OrientDB version has been updated to version `3.0.25`

icon:plus[] Security: Build artifacts for Gentics Mesh will now be cryptographically signed using GPG.

icon:check[] Core: Some no longer needed dependencies were removed.
