@@ -1,6 +1,5 @@
-FROM adoptopenjdk/openjdk11:x86_64-alpine-jre-11.0.3_7
+FROM adoptopenjdk/openjdk11:x86_64-alpine-jre-11.0.5_10
 
-ENV ESVERSION 6.8.0
 ENV MESH_AUTH_KEYSTORE_PATH=/keystore/keystore.jks
 ENV MESH_GRAPH_BACKUP_DIRECTORY=/backups
 ENV MESH_GRAPH_DB_DIRECTORY=/graphdb
@@ -25,17 +24,6 @@ RUN mkdir /graphdb   && chown mesh: /graphdb    -R && \
     mkdir /config    && chown mesh: /config     -R && ln -s /config /mesh/config && \
     mkdir /mesh/data && chown mesh: /mesh/data  -R
 
-ADD https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-oss-$ESVERSION.tar.gz /es.tar.gz
-
-WORKDIR /
-RUN apk --update --no-cache add tar \
-    && tar xfz /es.tar.gz && apk del tar \
-    && mv elasticsearch* elasticsearch \
-    && rm /es.tar.gz \
-    && ln -s /elasticsearch /mesh/elasticsearch \
-    && mkdir -p /elasticsearch/data \
-    && chown mesh: /elasticsearch -R
-
 USER mesh
 WORKDIR /mesh
 
@@ -46,8 +34,4 @@ VOLUME /plugins
 VOLUME /keystore
 VOLUME /config
 
-VOLUME /elasticsearch/data
-VOLUME /elasticsearch/config
-
 CMD [ "java", "-jar" , "mesh.jar" ]
-
