@@ -39,7 +39,6 @@ public class ServerRunner2 {
 		options.getClusterOptions().setVertxPort(6151);
 		options.getClusterOptions().setEnabled(true);
 		options.getSearchOptions().setUrl("http://localhost:9200");
-		options.getSearchOptions().setStartEmbedded(false);
 		options.getHttpServerOptions().setPort(8082);
 		options.getMonitoringOptions().setPort(8083);
 
