@@ -25,6 +25,8 @@ include::content/docs/variables.adoc-include[]
 
 * The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.
 
+CAUTION: The previously deprecated support for embedded Elasticsearch in `mesh-server` has been removed. The embedded ES can no longer be used with `mesh-server`.
+
 [[v1.3.0]]
 == 1.3.0 (05.12.2019)
 
